tTrying to fix NavBar height issue on ios mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+/* body {
+  min-height: fill-available;
+  min-height: -webkit-fill-available;
+}
+html {
+  height: fill-available;
+  height: -webkit-fill-available;
+} */
+
 @layer base {
   :root {
     --background: 0 0% 100%;
